2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Make struct and array constructors primary
	syntax entities.
	* testsuite/poke.pkl/scons-70.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-04-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-promo.c (pkl_promo_ps_cast): Do not try to promote
	regular structs to integral structs.
	* testsuite/poke.pkl/cast-int-struct-4.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/Makefile.am (dist_lisp_DATA): Do not install poke-mode.
	* emacs: Remove.
	* etc/poke-mode.el: Remove.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke-el.texi: Capitalize etc.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-settings-map): Define.
	(poke-settings-create-widgets): Use poke-settings-map.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-vu-goto-byte): Do not handle current-pos.
	(poke-vu-mode): Likewise.
	(poke-vu-handle-cmd): Get current-pos from the buffer.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version to 2.3.
	* doc/gendocs_template: Likewise.
	* NEWS: Entries for 2.3.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Fix
	diagnostics in 32-bit.

2022-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version to 2.2.
	* doc/gendocs_template: Likewise.
	* NEWS: Update for 2.2.

2022-03-28  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-maps-cmd-copy-name-as-kill): Define.
	(poke-maps-mode-map): Map command above to (kbd "w").

2022-03-22  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-complete-process): Define.
	(poke-complete): Likewise.
	(poke-complete-handle-cmd): Likewise.
	(poke-repl): Depends on poke-complete.
	(poke-exit): Take care of *poke-complete*.

2022-03-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
