@@ -2037,4 +2037,6 @@ pkl_ast_node pkl_ast_reverse (pkl_ast_node ast);
 
 void pkl_ast_print (FILE *fp, pkl_ast_node ast);
 
+char *pkl_ast_format_loc (pkl_ast ast, pkl_ast_loc loc);
+
 #endif /* ! PKL_AST_H */
